--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"deploy": "node scripts/predeploy.js && gh-pages -d .svelte-kit/output/client -t true"
+		"deploy": "gh-pages -d build -t true"
 	},
 	"devDependencies": {
 		"@grail-ui/svelte": "^0.6.2",
@@ -26,7 +26,6 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"fs-extra": "^11.1.0",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
